--- a/index.html
+++ b/index.html
@@ -42,17 +42,7 @@
     .no-scrollbar::-webkit-scrollbar { display: none; }
     .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
   </style>
-<script type="importmap">
-{
-  "imports": {
-    "recharts": "https://esm.sh/recharts@^2.12.7",
-    "react-dom/": "https://esm.sh/react-dom@^19.0.0/",
-    "react/": "https://esm.sh/react@^19.0.0/",
-    "react": "https://esm.sh/react@^19.0.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.2.0"
-  }
-}
-</script>
+  <script type="module" src="/index.tsx"></script>
 </head>
 <body>
   <div id="root"></div>
