--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CrowdSense™ | Enterprise Command</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;700&display=swap"
+    rel="stylesheet">
   <!-- ONNX Runtime for Local YOLO -->
-  <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web@1.20.1/dist/ort.min.js"></script>
   <!-- HLS.js for IP Camera Streams -->
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <style>
@@ -18,12 +20,17 @@
       color: #f8fafc;
       overflow: hidden;
     }
-    .mono { font-family: 'JetBrains Mono', monospace; }
+
+    .mono {
+      font-family: 'JetBrains Mono', monospace;
+    }
+
     .glass {
       background: rgba(15, 23, 42, 0.7);
       backdrop-filter: blur(12px);
       border: 1px solid rgba(255, 255, 255, 0.1);
     }
+
     .scanline {
       width: 100%;
       height: 2px;
@@ -35,16 +42,31 @@
       z-index: 10;
       pointer-events: none;
     }
+
     @keyframes scan {
-      0% { transform: translateY(-100%); }
-      100% { transform: translateY(1000%); }
+      0% {
+        transform: translateY(-100%);
+      }
+
+      100% {
+        transform: translateY(1000%);
+      }
     }
-    .no-scrollbar::-webkit-scrollbar { display: none; }
-    .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
+
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    .no-scrollbar {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
   </style>
   <script type="module" src="/index.tsx"></script>
 </head>
+
 <body>
   <div id="root"></div>
 </body>
+
 </html>
