--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web@1.20.1/dist/ort.min.js"></script>
   <!-- HLS.js for IP Camera Streams -->
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <!-- JSMpeg for Low-Latency RTSP -->
+  <script src="https://cdn.jsdelivr.net/gh/phoboslab/jsmpeg@master/jsmpeg.min.js"></script>
   <style>
     body {
       font-family: 'Inter', sans-serif;
